tests/cases/scc/error/0005-fmacro.c.res
./tests/cases/scc/error/0005-fmacro.c:8:11:	error:   expected a token before the end of the line.
exit code 1
